--- a/index.html
+++ b/index.html
@@ -19,178 +19,218 @@
       rel="stylesheet"
     />
   </head>
+
+  <!--header-->
+
   <body>
     <header>
-      <nav>
-        <a href="./index.html" class="logo"
-          >Web<span class="studio">Studio</span></a
-        >
-        <ul class="menu">
-          <li><a href="./index.html" class="logo-list">Studio</a></li>
-          <li><a href="" class="logo-list">Portfolio</a></li>
-          <li><a href="" class="logo-list">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="add">
-        <ul class="info">
-          <li>
-            <a href="mailto:info@devstudio.com" class="cont"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="cont">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container navigation-container">
+        <nav class="nav-list">
+          <a href="./index.html" class="logo"
+            >Web<span class="studio">Studio</span></a
+          >
+          <ul class="menu">
+            <li><a href="./index.html" class="logo-list">Studio</a></li>
+            <li><a href="" class="logo-list">Portfolio</a></li>
+            <li><a href="" class="logo-list">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="add">
+          <ul class="info">
+            <li>
+              <a href="mailto:info@devstudio.com" class="cont"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="cont">+11 (000) 111-11-11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
+
+    <!--main-1section-->
+
     <main>
       <section class="business">
-        <h1 class="page-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="button">Order Service</button>
+        <div class="container hero-container">
+          <h1 class="page-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="button">Order Service</button>
+        </div>
       </section>
+
+      <!--2-section-->
+
       <section class="features">
-        <h2 class="second-title">Our features</h2>
-        <ul>
-          <li>
-            <h3 class="third-title">Strategy</h3>
-            <p class="text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="third-title">Punctuality</h3>
-            <p class="text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="third-title">Diligence</h3>
-            <p class="text">
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="third-title">Technologies</h3>
-            <p class="text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container mision-container">
+          <h2 class="second-title">Our features</h2>
+          <ul class="mision-list">
+            <li class="mision-item">
+              <h3 class="third-title">Strategy</h3>
+              <p class="text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="mision-item">
+              <h3 class="third-title">Punctuality</h3>
+              <p class="text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="mision-item">
+              <h3 class="third-title">Diligence</h3>
+              <p class="text">
+                Research and confirm brands with the strongest digital growth
+                opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="mision-item">
+              <h3 class="third-title">Technologies</h3>
+              <p class="text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
+
+      <!--3-section-->
+
       <section class="team">
-        <h2 class="team-title">Our Team</h2>
-        <ul class="te-list">
-          <li class="list">
-            <img
-              src="./images/team/mark-guerrero.jpg"
-              alt="Mark Guerrero — Product Designer"
-              width="264"
-            />
-            <h3 class="third-title">Mark Guerrero</h3>
-            <p class="text">Product Designer</p>
-          </li>
-          <li class="list">
-            <img
-              src="./images/team/tom-ford.jpg"
-              alt="Tom Ford — Frontend Developer"
-              width="264"
-            />
-            <h3 class="third-title">Tom Ford</h3>
-            <p class="text">Frontend Developer</p>
-          </li>
-          <li class="list">
-            <img
-              src="./images/team/camila-garcia.jpg"
-              alt="Camila Garcia — Marketing Specialist"
-              width="264"
-            />
-            <h3 class="third-title">Camila Garcia</h3>
-            <p class="text">Marketing</p>
-          </li>
-          <li class="list">
-            <img
-              src="./images/team/daniel-wilson.jpg"
-              alt="Daniel Wilson — UI Designer"
-              width="264"
-            />
-            <h3 class="third-title">Daniel Wilson</h3>
-            <p class="text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container team-container">
+          <h2 class="team-title">Our Team</h2>
+          <ul class="te-list">
+            <li class="list">
+              <img
+                class="photo"
+                src="./images/team/mark-guerrero.jpg"
+                alt="Mark Guerrero — Product Designer"
+                width="264"
+              />
+              <h3 class="third-title">Mark Guerrero</h3>
+              <p class="text">Product Designer</p>
+            </li>
+            <li class="list">
+              <img
+                class="photo"
+                src="./images/team/tom-ford.jpg"
+                alt="Tom Ford — Frontend Developer"
+                width="264"
+              />
+              <h3 class="third-title">Tom Ford</h3>
+              <p class="text">Frontend Developer</p>
+            </li>
+            <li class="list">
+              <img
+                class="photo"
+                src="./images/team/camila-garcia.jpg"
+                alt="Camila Garcia — Marketing Specialist"
+                width="264"
+              />
+              <h3 class="third-title">Camila Garcia</h3>
+              <p class="text">Marketing</p>
+            </li>
+            <li class="list">
+              <img
+                class="photo"
+                src="./images/team/daniel-wilson.jpg"
+                alt="Daniel Wilson — UI Designer"
+                width="264"
+              />
+              <h3 class="third-title">Daniel Wilson</h3>
+              <p class="text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
+
+      <!--4-section-->
+
       <section class="portfolio">
-        <h2 class="port-title">Our Portfolio</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/team/banking-app.jpg"
-              alt="Banking App"
-              width="360"
-            />
-            <h3 class="third-title">Banking App</h3>
-            <p class="text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/team/cashless-payment.jpg"
-              alt="Cashless Payment"
-              width="360"
-            />
-            <h3 class="third-title">Cashless Payment</h3>
-            <p class="text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/team/meditation-app.jpg"
-              alt="Meditation App"
-              width="360"
-            />
-            <h3 class="third-title">Meditation App</h3>
-            <p class="text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/team/taxi-service.jpg"
-              alt="Taxi Service"
-              width="360"
-            />
-            <h3 class="third-title">Taxi Service</h3>
-            <p class="text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/team/screan-illustrations.jpg"
-              alt="Screen Illustrations"
-              width="360"
-            />
-            <h3 class="third-title">Screen Illustrations</h3>
-            <p class="text">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/team/online-courses.jpg"
-              alt="Online Courses"
-              width="360"
-            />
-            <h3 class="third-title">Online Courses</h3>
-            <p class="text">Marketing</p>
-          </li>
-        </ul>
+        <div class="container portfolio-container">
+          <h2 class="port-title">Our Portfolio</h2>
+          <ul>
+            <li>
+              <img
+                class="photo"
+                src="./images/team/banking-app.jpg"
+                alt="Banking App"
+                width="360"
+              />
+              <h3 class="third-title">Banking App</h3>
+              <p class="text">App</p>
+            </li>
+            <li>
+              <img
+                class="photo"
+                src="./images/team/cashless-payment.jpg"
+                alt="Cashless Payment"
+                width="360"
+              />
+              <h3 class="third-title">Cashless Payment</h3>
+              <p class="text">Marketing</p>
+            </li>
+            <li>
+              <img
+                class="photo"
+                src="./images/team/meditation-app.jpg"
+                alt="Meditation App"
+                width="360"
+              />
+              <h3 class="third-title">Meditation App</h3>
+              <p class="text">App</p>
+            </li>
+            <li>
+              <img
+                class="photo"
+                src="./images/team/taxi-service.jpg"
+                alt="Taxi Service"
+                width="360"
+              />
+              <h3 class="third-title">Taxi Service</h3>
+              <p class="text">Marketing</p>
+            </li>
+            <li>
+              <img
+                class="photo"
+                src="./images/team/screan-illustrations.jpg"
+                alt="Screen Illustrations"
+                width="360"
+              />
+              <h3 class="third-title">Screen Illustrations</h3>
+              <p class="text">Design</p>
+            </li>
+            <li>
+              <img
+                class="photo"
+                src="./images/team/online-courses.jpg"
+                alt="Online Courses"
+                width="360"
+              />
+              <h3 class="third-title">Online Courses</h3>
+              <p class="text">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
+
+    <!--footer-->
+
     <footer class="end-page">
-      <a href="./index.html" class="logo-foot"
-        >Web<span class="studioo">Studio</span></a
-      >
-      <p class="end-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container end-container">
+        <a href="./index.html" class="logo-foot"
+          >Web<span class="studioo">Studio</span></a
+        >
+        <p class="end-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
