--- a/index.html
+++ b/index.html
@@ -111,8 +111,10 @@
                 alt="Mark Guerrero — Product Designer"
                 width="264"
               />
-              <h3 class="third-title">Mark Guerrero</h3>
-              <p class="text">Product Designer</p>
+              <div class="team-info">
+                <h3 class="third-title">Mark Guerrero</h3>
+                <p class="text">Product Designer</p>
+              </div>
             </li>
             <li class="list">
               <img
@@ -121,8 +123,10 @@
                 alt="Tom Ford — Frontend Developer"
                 width="264"
               />
-              <h3 class="third-title">Tom Ford</h3>
-              <p class="text">Frontend Developer</p>
+              <div class="team-info">
+                <h3 class="third-title">Tom Ford</h3>
+                <p class="text">Frontend Developer</p>
+              </div>
             </li>
             <li class="list">
               <img
@@ -131,8 +135,10 @@
                 alt="Camila Garcia — Marketing Specialist"
                 width="264"
               />
-              <h3 class="third-title">Camila Garcia</h3>
-              <p class="text">Marketing</p>
+              <div class="team-info">
+                <h3 class="third-title">Camila Garcia</h3>
+                <p class="text">Marketing</p>
+              </div>
             </li>
             <li class="list">
               <img
@@ -141,8 +147,10 @@
                 alt="Daniel Wilson — UI Designer"
                 width="264"
               />
-              <h3 class="third-title">Daniel Wilson</h3>
-              <p class="text">UI Designer</p>
+              <div class="team-info">
+                <h3 class="third-title">Daniel Wilson</h3>
+                <p class="text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -153,17 +161,19 @@
       <section class="portfolio">
         <div class="container portfolio-container">
           <h2 class="port-title">Our Portfolio</h2>
-          <ul>
-            <li>
+          <ul class="port-list">
+            <li class="port-list-item">
               <img
                 class="photo"
                 src="./images/team/banking-app.jpg"
                 alt="Banking App"
                 width="360"
               />
-              <h3 class="third-title">Banking App</h3>
+              <div class="portfolio-case-info">
+              <h3 class="portfo-title">Banking App</h3>
               <p class="text">App</p>
-            </li>
+              </div>
+            </li class="port-list-item">
             <li>
               <img
                 class="photo"
@@ -171,48 +181,58 @@
                 alt="Cashless Payment"
                 width="360"
               />
-              <h3 class="third-title">Cashless Payment</h3>
+              <div class="portfolio-case-info">
+              <h3 class="portfo-title">Cashless Payment</h3>
               <p class="text">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="port-list-item">
               <img
                 class="photo"
                 src="./images/team/meditation-app.jpg"
                 alt="Meditation App"
                 width="360"
               />
-              <h3 class="third-title">Meditation App</h3>
+              <div class="portfolio-case-info">
+              <h3 class="portfo-title">Meditation App</h3>
               <p class="text">App</p>
+              </div>
             </li>
-            <li>
+            <li class="port-list-item">
               <img
                 class="photo"
                 src="./images/team/taxi-service.jpg"
                 alt="Taxi Service"
                 width="360"
               />
-              <h3 class="third-title">Taxi Service</h3>
+              <div class="portfolio-case-info">
+              <h3 class="portfo-title">Taxi Service</h3>
               <p class="text">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="port-list-item">
               <img
                 class="photo"
                 src="./images/team/screan-illustrations.jpg"
                 alt="Screen Illustrations"
                 width="360"
               />
-              <h3 class="third-title">Screen Illustrations</h3>
+              <div class="portfolio-case-info">
+              <h3 class="portfo-title">Screen Illustrations</h3>
               <p class="text">Design</p>
+              </div>
             </li>
-            <li>
+            <li class="port-list-item">
               <img
                 class="photo"
                 src="./images/team/online-courses.jpg"
                 alt="Online Courses"
                 width="360"
               />
-              <h3 class="third-title">Online Courses</h3>
+              <div class="portfolio-case-info">
+              <h3 class="portfo-title">Online Courses</h3>
               <p class="text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
