--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!--header-->
 
   <body>
-    <header>
+    <header class="had">
       <div class="container navigation-container">
         <nav class="nav-list">
           <a href="./index.html" class="logo"
@@ -174,7 +174,7 @@
               <p class="text">App</p>
               </div>
             </li class="port-list-item">
-            <li>
+            <li class="port-list-item">
               <img
                 class="photo"
                 src="./images/team/cashless-payment.jpg"
