--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header class="had">
       <div class="container navigation-container">
         <nav class="nav-list">
-          <a href="./index.html" class="logo"
+          <a href="./index.html" class="logo header-logo"
             >Web<span class="studio">Studio</span></a
           >
           <ul class="menu">
@@ -53,7 +53,7 @@
     <!--main-1section-->
 
     <main>
-      <section class="business">
+      <section class="hero">
         <div class="container hero-container">
           <h1 class="page-title">Effective Solutions for Your Business</h1>
           <button type="button" class="button">Order Service</button>
@@ -62,34 +62,34 @@
 
       <!--2-section-->
 
-      <section class="features">
+      <section class="mision">
         <div class="container mision-container">
-          <h2 class="second-title">Our features</h2>
+          <h2 class="mision-title-visual-hidden">Our features</h2>
           <ul class="mision-list">
             <li class="mision-item">
-              <h3 class="third-title">Strategy</h3>
-              <p class="text">
+              <h3 class="mision-third-title">Strategy</h3>
+              <p class="mision-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
             <li class="mision-item">
-              <h3 class="third-title">Punctuality</h3>
-              <p class="text">
+              <h3 class="mision-third-title">Punctuality</h3>
+              <p class="mision-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
             <li class="mision-item">
-              <h3 class="third-title">Diligence</h3>
-              <p class="text">
+              <h3 class="mision-third-title">Diligence</h3>
+              <p class="mision-text">
                 Research and confirm brands with the strongest digital growth
                 opportunities and minimize risk.
               </p>
             </li>
             <li class="mision-item">
-              <h3 class="third-title">Technologies</h3>
-              <p class="text">
+              <h3 class="mision-third-title">Technologies</h3>
+              <p class="mision-text">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
               </p>
@@ -104,7 +104,7 @@
         <div class="container team-container">
           <h2 class="team-title">Our Team</h2>
           <ul class="te-list">
-            <li class="list">
+            <li class="te-list-item">
               <img
                 class="photo"
                 src="./images/team/mark-guerrero.jpg"
@@ -112,8 +112,8 @@
                 width="264"
               />
               <div class="team-info">
-                <h3 class="third-title">Mark Guerrero</h3>
-                <p class="text">Product Designer</p>
+                <h3 class="team-third-title">Mark Guerrero</h3>
+                <p class="text-team">Product Designer</p>
               </div>
             </li>
             <li class="list">
@@ -124,8 +124,8 @@
                 width="264"
               />
               <div class="team-info">
-                <h3 class="third-title">Tom Ford</h3>
-                <p class="text">Frontend Developer</p>
+                <h3 class="team-third-title">Tom Ford</h3>
+                <p class="text-team">Frontend Developer</p>
               </div>
             </li>
             <li class="list">
@@ -136,8 +136,8 @@
                 width="264"
               />
               <div class="team-info">
-                <h3 class="third-title">Camila Garcia</h3>
-                <p class="text">Marketing</p>
+                <h3 class="team-third-title">Camila Garcia</h3>
+                <p class="text-team">Marketing</p>
               </div>
             </li>
             <li class="list">
@@ -148,8 +148,8 @@
                 width="264"
               />
               <div class="team-info">
-                <h3 class="third-title">Daniel Wilson</h3>
-                <p class="text">UI Designer</p>
+                <h3 class="team-third-title">Daniel Wilson</h3>
+                <p class="text-team">UI Designer</p>
               </div>
             </li>
           </ul>
@@ -170,8 +170,8 @@
                 width="360"
               />
               <div class="portfolio-case-info">
-                <h3 class="portfo-title">Banking App</h3>
-                <p class="text">App</p>
+                <h3 class="port-third-title">Banking App</h3>
+                <p class="port-text">App</p>
               </div>
             </li>
             <li class="port-list-item">
@@ -182,8 +182,8 @@
                 width="360"
               />
               <div class="portfolio-case-info">
-                <h3 class="portfo-title">Cashless Payment</h3>
-                <p class="text">Marketing</p>
+                <h3 class="port-third-title">Cashless Payment</h3>
+                <p class="port-text">Marketing</p>
               </div>
             </li>
             <li class="port-list-item">
@@ -194,8 +194,8 @@
                 width="360"
               />
               <div class="portfolio-case-info">
-                <h3 class="portfo-title">Meditation App</h3>
-                <p class="text">App</p>
+                <h3 class="port-third-title">Meditation App</h3>
+                <p class="port-text">App</p>
               </div>
             </li>
             <li class="port-list-item">
@@ -206,8 +206,8 @@
                 width="360"
               />
               <div class="portfolio-case-info">
-                <h3 class="portfo-title">Taxi Service</h3>
-                <p class="text">Marketing</p>
+                <h3 class="port-third-title">Taxi Service</h3>
+                <p class="port-text">Marketing</p>
               </div>
             </li>
             <li class="port-list-item">
@@ -218,8 +218,8 @@
                 width="360"
               />
               <div class="portfolio-case-info">
-                <h3 class="portfo-title">Screen Illustrations</h3>
-                <p class="text">Design</p>
+                <h3 class="port-third-title">Screen Illustrations</h3>
+                <p class="port-text">Design</p>
               </div>
             </li>
             <li class="port-list-item">
@@ -230,8 +230,8 @@
                 width="360"
               />
               <div class="portfolio-case-info">
-                <h3 class="portfo-title">Online Courses</h3>
-                <p class="text">Marketing</p>
+                <h3 class="port-third-title">Online Courses</h3>
+                <p class="port-text">Marketing</p>
               </div>
             </li>
           </ul>
@@ -241,12 +241,12 @@
 
     <!--footer-->
 
-    <footer class="end-page">
-      <div class="container end-container">
-        <a href="./index.html" class="logo-foot"
+    <footer class="bottom-content">
+      <div class="container bottom-container">
+        <a href="./index.html" class="logo logo-foot"
           >Web<span class="studioo">Studio</span></a
         >
-        <p class="end-text">
+        <p class="bottom-text">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
