--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <p class="text-team">Product Designer</p>
               </div>
             </li>
-            <li class="list">
+            <li class="te-list-item">
               <img
                 class="photo"
                 src="./images/team/tom-ford.jpg"
@@ -128,7 +128,7 @@
                 <p class="text-team">Frontend Developer</p>
               </div>
             </li>
-            <li class="list">
+            <li class="te-list-item">
               <img
                 class="photo"
                 src="./images/team/camila-garcia.jpg"
@@ -140,7 +140,7 @@
                 <p class="text-team">Marketing</p>
               </div>
             </li>
-            <li class="list">
+            <li class="te-list-item">
               <img
                 class="photo"
                 src="./images/team/daniel-wilson.jpg"
